--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,29 @@
-#map {
-  height: 500px;
+.main-container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+
+  #map {
+    height: 500px;
+  }
+
+  .coordinate-form {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+
+
+    .coordinate-x-input {
+      margin-right: 10px;
+    }
+
+    .search-btn {
+      margin-left: 10px;
+    }
+  }
+
+  .map-container {
+    margin-top: 10px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0 -3px 5px;
+  }
 }
