feat(app): add possibility to paste coordinates into coordinates form using keyboard combination

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="coordinate-form">
     <form [formGroup]="coordinateForm">
-      <input class="coordinate-x-input" formControlName="coordinateX" placeholder="Coordinate X">
+      <input #coordinateXInput class="coordinate-x-input" formControlName="coordinateX" placeholder="Coordinate X">
       <input class="coordinate-y-input" formControlName="coordinateY" placeholder="Coordinate Y">
     </form>
 
