feat(app): add possibility to choose file with coordinates and show coordinates on the map from file

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -24,6 +24,10 @@
     .search-btn {
       margin-left: 10px;
     }
+
+    .choose-file-input {
+      margin-left: 10px;
+    }
   }
 
   .invalid-value-message {
