--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,6 +9,7 @@
     </form>
 
     <button class="search-btn" [disabled]="isCoordinateXInvalid || isCoordinateYInvalid" (click)="setViewAndMarkByCoordinates()">Search</button>
+    <input class="choose-file-input" type="file" [formControl]="fileControl" (change)="readFile($event)">
   </div>
 
   <div id="map" class="map-container"></div>
