feat(app): add methods to show/hide polygons or markers on different zoom levels, add some styles, refactor code

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,9 +9,12 @@
     </form>
 
     <button class="search-btn" [disabled]="isCoordinateXInvalid || isCoordinateYInvalid" (click)="setViewAndMarkByCoordinates()">Search</button>
-    <button class="save-geo-btn" (click)="saveFile()">Save geo data to file</button>
     <input class="choose-file-input" type="file" [formControl]="fileControl" (change)="readFile($event)">
   </div>
 
   <div id="map" class="map-container"></div>
+
+  <div class="save-geo">
+    <button class="save-geo-btn" [disabled]="isSaveGeoDataBtnDisabled" (click)="saveFile()">Save drawn polygons to file</button>
+  </div>
 </div>
