--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -80,3 +80,16 @@
     }
   }
 }
+
+::ng-deep {
+  .custom-marker-cluster {
+    border: 4px solid black;
+    color: black;
+    font-size: 20px;
+    background: red;
+    text-align: center;
+    border-radius: 50px;
+  }
+}
+
+
