feat: install angular material into project, add styles for template elements

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,22 +1,28 @@
 <div class="map-page">
   <div class="form-container">
     <form [formGroup]="coordinatesForm" class="coordinate-form">
-      <input #coordinateXInput  placeholder="Write coordinate X" type="text" formControlName="coordinateX" class="coordinateX-control">
-      <p *ngIf="isCoordinateXInvalid" class="invalid-value-message">Invalid coordinate X</p>
+      <mat-form-field class="coordinate-x-input">
+        <mat-label>Coordinate X</mat-label>
+        <input matInput #coordinateXInput  placeholder="Write coordinate X" type="text" formControlName="coordinateX">
+        <mat-error *ngIf="isCoordinateXInvalid">Invalid coordinate x</mat-error>
+      </mat-form-field>
 
-      <input placeholder="Write coordinate Y" type="text" formControlName="coordinateY" class="coordinateY-control">
-      <p *ngIf="isCoordinateYInvalid" class="invalid-value-message invalid-y">Invalid coordinate Y</p>
+      <mat-form-field class="coordinate-y-input">
+        <mat-label>Coordinate Y</mat-label>
+        <input matInput placeholder="Write coordinate Y" type="text" formControlName="coordinateY">
+        <mat-error *ngIf="isCoordinateYInvalid">Invalid coordinate Y</mat-error>
+      </mat-form-field>
 
-      <button class="search-btn" (click)="setMarkerByCoordinates()">Search</button>
+      <button mat-raised-button class="search-btn" (click)="setMarkerByCoordinates()">Search</button>
     </form>
   </div>
 
   <div id="map" class="map"></div>
 
   <div class="file-control">
-    <button [disabled]="isSaveGeoDataButtonDisabled" (click)="saveGeoDataInFile()">Save polygons in file</button>
-    <input id="file" type="file" [formControl]="fileControl" (change)="getGeoDataFromFile($event)">
-    <label for="file">Load polygons from file</label>
+    <button mat-raised-button class="save-in-file-btn" [disabled]="isSaveGeoDataButtonDisabled" (click)="saveGeoDataInFile()">Save polygons in file</button>
+    <button mat-raised-button class="load-from-file-btn" (click)="fileInput.click()">Load polygons from file</button>
+    <input hidden id="file" type="file" #fileInput [formControl]="fileControl" (change)="getGeoDataFromFile($event)">
   </div>
 </div>
 
