--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -1,34 +1,25 @@
 .map-page {
   width: 100%;
+  background: #191b24;
+  height: 1000px;
 
   .form-container {
     padding-top: 10px;
     width: 100%;
-    max-width: 433px;
+    max-width: 460px;
     margin: 0 auto;
 
     .coordinate-form {
       margin-bottom: 20px;
 
-      .coordinateY-control {
-        margin-left: 10px;
+      .coordinate-x-input {
+        margin-right: 10px;
       }
 
       .search-btn {
         margin-left: 10px;
-      }
-
-      .invalid-value-message {
-        font-family: "Roboto Light", sans-serif;
-        font-size: 13px;
-        color: red;
-        text-align: center;
-        margin: 0;
-        position: absolute;
-      }
-
-      .invalid-y {
-        margin-left: 187px;
+        background: #a1098a;
+        color: white;
       }
     }
   }
@@ -37,6 +28,7 @@
     height: 500px;
     max-width: 1000px;
     margin: 0 auto;
+    border-radius: 10px;
   }
 
   .file-control {
@@ -47,20 +39,18 @@
     margin: 0 auto;
     max-width: 1000px;
 
-    input[type="file"] {
-      display: none;
+    .save-in-file-btn {
+      color: white;
+      background: #a1098a;
     }
 
-    input[type="file"] + label {
-      display: block;
-      background: #f5f5f5;
-      border: 1px solid #949494;
-      padding: 5px 10px;
-      border-radius: 3px;
+    .load-from-file-btn {
+      color: white;
+      background: #a1098a;
+    }
 
-      &:hover {
-        cursor: pointer;
-      }
+    .save-in-file-btn:disabled {
+      background: #404040;
     }
   }
 }
@@ -76,3 +66,18 @@
   }
 }
 
+.coordinate-form {
+  ::ng-deep {
+    .mat-form-field-appearance-legacy .mat-form-field-label {
+       color: #9f9f9f;
+    }
+
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+      background-color: #9f9f9f;
+    }
+
+    .mat-input-element {
+      color: white;
+    }
+  }
+}
