--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -31,7 +31,7 @@
     border-radius: 10px;
   }
 
-  .file-control {
+  .overlay-and-file-control-container {
     padding-top: 10px;
     display: flex;
     justify-content: space-between;
@@ -44,9 +44,28 @@
       background: #a1098a;
     }
 
+    .overlay-input-active {
+      z-index: 1000000;
+    }
+
     .load-from-file-btn {
       color: white;
       background: #a1098a;
+      margin-left: 10px;
+    }
+
+    .next-page-btn {
+      margin-left: 10px;
+      border-radius: 50%;
+      min-width: unset;
+      padding: 0 7px;
+      background: #a1098a;
+
+      .mat-icon {
+        font-size: 18px;
+        height: 21px;
+        color: white;
+      }
     }
 
     .save-in-file-btn:disabled {
@@ -64,12 +83,30 @@
     text-align: center;
     border-radius: 50px;
   }
+
+  .overlay-list {
+    padding: 0;
+    width: 200px;
+    background: #1b1b21;
+
+    .list {
+      width: 100%;
+      padding: 3px 0 3px 15px;
+      list-style-type: none;
+      color: #9f9f9f;
+      font-size: 16px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .coordinate-form {
   ::ng-deep {
     .mat-form-field-appearance-legacy .mat-form-field-label {
-       color: #9f9f9f;
+      color: #9f9f9f;
     }
 
     .mat-form-field-appearance-legacy .mat-form-field-underline {
@@ -78,6 +115,26 @@
 
     .mat-input-element {
       color: white;
+    }
+  }
+}
+
+.overlay-block {
+  ::ng-deep {
+    .mat-form-field-appearance-legacy .mat-form-field-label {
+      color: #9f9f9f;
+    }
+
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+      background-color: #9f9f9f;
+    }
+
+    .mat-input-element {
+      color: white;
+    }
+
+    .mat-icon {
+      color: #9f9f9f;
     }
   }
 }
