feat(app): add routing module, add new component with another map, add new method in map component to show marker clusters, clear map component

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -46,7 +46,7 @@
       <button mat-raised-button class="load-from-file-btn" (click)="fileInput.click()">Load polygons from file</button>
       <input hidden id="file" type="file" #fileInput [formControl]="fileControl" (change)="getGeoDataFromFile($event)">
 
-      <button mat-raised-button class="next-page-btn" matTooltip="Another map">
+      <button mat-raised-button class="next-page-btn" matTooltip="Another map" (click)="watchSecondMap()">
         <mat-icon>arrow_forward_ios</mat-icon>
       </button>
     </div>
