--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -21,24 +21,7 @@
 
   <div class="overlay-and-file-control-container">
     <div class="overlay-block">
-      <mat-form-field
-        cdkOverlayOrigin
-        #overlay="cdkOverlayOrigin"
-        [class.overlay-input-active]="showOverlay | async">
-        <mat-label>Type of figure to display</mat-label>
-        <input #overlayInput matInput type="text" [formControl]="overlayControl">
-        <mat-icon matSuffix>arrow_drop_down</mat-icon>
-      </mat-form-field>
-      <ng-template
-        cdkConnectedOverlay
-        [cdkConnectedOverlayOrigin]="overlay"
-        [cdkConnectedOverlayHasBackdrop]="true"
-        [cdkConnectedOverlayOffsetY]="-28"
-        [cdkConnectedOverlayOpen]="(showOverlay | async) || false">
-        <ul class="overlay-list">
-          <li class="list" *ngFor="let item of itemKind" (click)="getSelectedValueFromOverlay(item)">{{item}}</li>
-        </ul>
-      </ng-template>
+      <app-cdk-overlay [drawnItems]="drawnItems" (selectedValueFromOverlay)="showOrHideLayersBySelectedValueFromOverlay($event)"></app-cdk-overlay>
     </div>
 
     <div class="file-control-block">
