--- a/src/app/cdk-overlay/cdk-overlay.component.html
+++ b/src/app/cdk-overlay/cdk-overlay.component.html
@@ -1,18 +1,22 @@
-<mat-form-field
-  cdkOverlayOrigin
-  #overlay="cdkOverlayOrigin"
-  [class.overlay-input-active]="showOverlay | async">
-  <mat-label>Type of figure to display</mat-label>
-  <input #overlayInput matInput type="text" [formControl]="overlayControl">
-  <mat-icon matSuffix>arrow_drop_down</mat-icon>
-</mat-form-field>
-<ng-template
-  cdkConnectedOverlay
-  [cdkConnectedOverlayOrigin]="overlay"
-  [cdkConnectedOverlayHasBackdrop]="true"
-  [cdkConnectedOverlayOffsetY]="-28"
-  [cdkConnectedOverlayOpen]="(showOverlay | async) || false">
-  <ul class="overlay-list">
-    <li class="list" *ngFor="let item of itemKind" (click)="setSelectedValue(item)">{{item}}</li>
-  </ul>
-</ng-template>
+<div class="overlay-container">
+  <mat-form-field
+    cdkOverlayOrigin
+    #overlay="cdkOverlayOrigin"
+    [class.overlay-input-active]="showOverlay | async">
+    <mat-label>Type of figure to display</mat-label>
+    <input readonly="readonly" #overlayInput matInput type="text" [formControl]="overlayControl">
+    <mat-icon matSuffix>arrow_drop_down</mat-icon>
+  </mat-form-field>
+  <ng-template
+    cdkConnectedOverlay
+    [cdkConnectedOverlayOrigin]="overlay"
+    [cdkConnectedOverlayHasBackdrop]="true"
+    [cdkConnectedOverlayBackdropClass]="'overlay-backdrop'"
+    [cdkConnectedOverlayOffsetY]="-28"
+    [cdkConnectedOverlayOpen]="(showOverlay | async) || false">
+    <ul class="overlay-list">
+      <li class="list" *ngFor="let item of itemKind" (click)="setSelectedValueAndCloseOverlay(item)">{{item}}</li>
+    </ul>
+  </ng-template>
+</div>
+
